Add HTML logo and style <a> tags

--- a/main.css
+++ b/main.css
@@ -17,10 +17,11 @@ body {
 h1 {
 	font-size: 55px;
 	font-weight: 900;
+	text-align: center;
 	font-family: Helvetica, Arial; 
 	color: #ff0000;
-	text-align: center;
-	padding: 30px 0 30px 0;
+	padding-top: 30px;
+	padding-bottom: 30px;
 }
 
 h2 {
@@ -29,6 +30,7 @@ h2 {
 	font-family: Helvetica, Arial; 
 	color: #000000;
 	margin-left: 10px;
+	display: inline;
 }
 
 h3 {
@@ -57,7 +59,6 @@ h5 {
 	color: #000000;
 	margin-top: 10px;
 	margin-bottom: 5px;
-
 }
 
 p {
@@ -70,35 +71,39 @@ p {
 
 a {
 	text-decoration: none;
+	color: #666666;
 }
 
 header {
 	background-color: #000000; 
-	width: 1000px;
+	width: 998px;
 	/*background-image: url(background.jpg);*/
 	margin: 0 auto 0 auto;
+	border: 1px solid #000000;
 }
 
 article {
 	width: 1000px;
 	margin: 0 auto 0 auto;
+	margin-top: 5px;
 }
 
 footer {
 	background-color: #000000;
 	width: 1000px;
-	margin: 10px auto 0 auto;
+	margin: 5px auto 0 auto;
+	color: #666666;
+	text-align: center;
+	padding: 20px 0 20px 0;
 }
 
-/*OK*/
 section {
 	background-color: #cccccc;
-	margin-top: 10px;
+	margin-top: 5px;
 	border: 1px solid #000000;
 	padding: 10px 10px 10px 10px;
 }
 
-/*OK*/
 .code {
 	background-color: #aaaaaa;
 }
@@ -115,18 +120,24 @@ li {
 }
 
 ul {
+	padding-left: 30px;
+	padding-right: 30px;
+}
 
+address {
+	color: #666666;
+}
+
+img {
+	float: right;
+	margin-right: 10px;
+	margin-top: 10px;
 }
 
 /*============================================================================*/
 
-header nav {
-
-}
-
-footer p {
+footer a:hover {
 	color: #ffffff;
-	text-align: center;
 }
 
 .code p{
@@ -153,13 +164,13 @@ article header p {
 	padding-left: 10px;
 }
 
-article ul {
-
-}
+article header a:hover {
+	color: #000000;
+	font-weight: 900;
+}  
 
 nav ul {
 	list-style-type: none;
-	text-align: center;
 	background-color: #ff0000;
 	padding-top: 10px;
 	padding-bottom: 10px;
@@ -173,7 +184,11 @@ nav li {
 
 nav a {
 	font-family: Helvetica, Arial; 
-	font-size: 16px;
+	font-size: 15px;
 	color: #666666;	
 	font-weight: 900;
+}
+
+nav a:hover {
+	color: #000000;	
 }
