--- a/main.css
+++ b/main.css
@@ -80,28 +80,39 @@ header {
 	/*background-image: url(background.jpg);*/
 	margin: 0 auto 0 auto;
 	border: 1px solid #000000;
+	border-radius: 10px;
+	box-shadow: 0 2px 1px #000;
+}
+
+nav {
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
 
 article {
 	width: 1000px;
 	margin: 0 auto 0 auto;
-	margin-top: 5px;
+	margin-top: 10px;
 }
 
 footer {
 	background-color: #000000;
 	width: 1000px;
-	margin: 5px auto 0 auto;
+	margin: 10px auto 0 auto;
 	color: #666666;
 	text-align: center;
 	padding: 20px 0 20px 0;
+	border-radius: 10px;
+	box-shadow: 0 2px 1px #444444;
 }
 
 section {
 	background-color: #cccccc;
-	margin-top: 5px;
+	margin-top: 10px;
 	border: 1px solid #000000;
 	padding: 10px 10px 10px 10px;
+	border-radius: 10px;
+	box-shadow: 0 2px 1px #000;
 }
 
 .code {
@@ -126,6 +137,10 @@ ul {
 
 address {
 	color: #666666;
+}
+
+figure {
+	display: inline;
 }
 
 img {
@@ -155,6 +170,7 @@ footer a:hover {
 article header {
 	background-color: #ffffff; 
 	padding: 10px 0 10px 0;
+	border-radius: 10px;
 }
 
 article header p {
@@ -174,6 +190,8 @@ nav ul {
 	background-color: #ff0000;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
 
 nav li {
