Add border-radius and left padding to 'code' and 'result'

--- a/main.css
+++ b/main.css
@@ -117,10 +117,14 @@ section {
 
 .code {
 	background-color: #aaaaaa;
+	border-radius: 10px;
+	padding-left: 5px;
 }
 
 .result {
 	background-color: #aaaaaa;
+	border-radius: 10px;
+	padding-left: 5px;
 }
 
 li {
