--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ figure, img, a, time {
 }
 
 body {
-	background-color: #666666;
+	background-color: #ffffff;
 }
 
 h1 {
@@ -20,17 +20,19 @@ h1 {
 	font-weight: 900;
 	text-align: center;
 	font-family: Helvetica, Arial; 
-	color: #ff0000;
+	color: #2b2d32;
 	padding-top: 30px;
 	padding-bottom: 30px;
+	text-shadow: 0 1px 1px #8c8c90;
 }
 
 h2 {
 	font-size: 40px;
 	font-weight: 800;
 	font-family: Helvetica, Arial; 
-	color: #000000;
+	color: white;
 	margin-left: 10px;
+	text-shadow: 0 1px 1px black;
 }
 
 h3 {
@@ -38,14 +40,15 @@ h3 {
 	font-weight: 700;
 	font-style: italic;
 	font-family: Helvetica, Arial; 
-	color: #000000;
+	color: #2b2d32;
+	text-shadow: 0 1px 1px #8c8c90;
 }
 
 h4 {
 	font-size: 20px;
 	font-weight: 300;
 	font-family: Helvetica, Arial; 
-	color: #000000;
+	color: #2b2d32;
 	margin-top: 15px;
 	margin-bottom: 5px;
 
@@ -56,7 +59,7 @@ h5 {
 	font-weight: 100;
 	font-style: italic;
 	font-family: Helvetica, Arial; 
-	color: #000000;
+	color: #2b2d32;
 	margin-top: 10px;
 	margin-bottom: 5px;
 }
@@ -65,7 +68,7 @@ p {
 	font-size: 15px;
 	font-weight: 100;
 	font-family: Times, "Times New Roman";
-	color: #000000;
+	color: #8c8c90;
 	margin-top: 5px;
 }
 
@@ -75,14 +78,14 @@ a {
 	font-size: 12px;
 	font-weight: 100;
 	font-family: Times, "Times New Roman";
-	color: #666666;
+	color: #8c8c90;
 }
 
 address {
 	font-size: 12px;
 	font-weight: 100;
 	font-family: Times, "Times New Roman";
-	color: #666666;
+	color: #8c8c90;
 }
 
 time {
@@ -90,22 +93,15 @@ time {
 	font-style: italic;
 	font-weight: 100;
 	font-family: Times, "Times New Roman";
-	color: #666666;
+	color: #8c8c90;
 }
 
 header {
-	background-color: #000000; 
-	width: 998px;
+	background-color: white; 
 	/*background-image: url(background.jpg);*/
 	margin: 0 auto 0 auto;
 	border: 1px solid #000000;
-	border-radius: 10px;
-	box-shadow: 0 2px 1px #000;
-}
-
-nav {
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
+	box-shadow: 0 1px 1px black;
 }
 
 article {
@@ -115,33 +111,31 @@ article {
 }
 
 footer {
-	background-color: #000000;
-	width: 1000px;
+	background-color: #2b2d32;
 	margin: 10px auto 0 auto;
-	color: #666666;
+	color: #8c8c90;
 	text-align: center;
 	padding: 20px 0 20px 0;
-	border-radius: 10px;
-	box-shadow: 0 2px 1px #444444;
+	box-shadow: 0 1px 1px black;
 }
 
 section {
-	background-color: #cccccc;
+	background-color: #f0f0f0;
 	margin-top: 10px;
 	border: 1px solid #000000;
 	padding: 10px 10px 10px 10px;
 	border-radius: 10px;
-	box-shadow: 0 2px 1px #000;
+	box-shadow: 0 1px 1px black;
 }
 
 .code {
-	background-color: #aaaaaa;
+	background-color: #ffffff;
 	border-radius: 10px;
 	padding-left: 5px;
 }
 
 .result {
-	background-color: #aaaaaa;
+	background-color: #ffffff;
 	border-radius: 10px;
 	padding-left: 5px;
 }
@@ -150,7 +144,7 @@ li {
 	font-size: 15px;
 	font-weight: 100;
 	font-family: Times, "Times New Roman";
-	color: #000000;
+	color: #8c8c90;
 }
 
 ul {
@@ -159,7 +153,7 @@ ul {
 }
 
 address {
-	color: #666666;
+	color: #8c8c90;
 }
 
 #author-date {
@@ -169,7 +163,7 @@ address {
 #author-date img {
 	float: left;
 	border-radius: 50%;
-	box-shadow: 0 1px 1px #000;
+	border: 2px solid white;
 }
 
 #author-date p {
@@ -181,7 +175,7 @@ address {
 /*============================================================================*/
 
 footer a:hover {
-	color: #ffffff;
+	color: white;
 }
 
 .code p{
@@ -197,22 +191,20 @@ footer a:hover {
 }
 
 article header {
-	background-color: #ffffff; 
+	background-color: #2b2d32; 
 	padding: 10px 0 55px 0;
 	border-radius: 10px;
 }
 
 article header a:hover {
-	color: #000000;
+	color: white;
 }  
 
 nav ul {
 	list-style-type: none;
-	background-color: #ff0000;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
+	background-color: #2b2d32;
+	padding-top: 20px;
+	padding-bottom: 20px;
 	text-align: center;
 }
 
@@ -225,11 +217,12 @@ nav li {
 nav a {
 	font-style: normal;
 	font-family: Helvetica, Arial; 
-	font-size: 15px;
-	color: #666666;	
+	font-size: 17px;
+	color: #8c8c90;
 	font-weight: 100;
+	text-shadow: 0 1px 1px black;
 }
 
 nav a:hover {
-	color: #000000;	
+	color: white;	
 }
