--- a/main.css
+++ b/main.css
@@ -97,6 +97,7 @@ time {
 }
 
 header {
+	background: radial-gradient(circle, #ffffff, #e8e8e8);
 	background-color: white; 
 	/*background-image: url(background.jpg);*/
 	margin: 0 auto 0 auto;
@@ -111,7 +112,7 @@ article {
 }
 
 footer {
-	background: linear-gradient(to bottom, #2b2d32, #000000);
+	background: linear-gradient(to top, #2b2d32, #3b3d42);
 	margin: 10px auto 0 auto;
 	color: #8c8c90;
 	text-align: center;
@@ -187,7 +188,7 @@ footer a:hover {
 }
 
 article header {
-	background: linear-gradient(to bottom, #2b2d32, #000000);
+	background: linear-gradient(to bottom, #2b2d32, #2b2d32);
 	padding: 10px 0 55px 0;
 	border-radius: 10px;
 }
@@ -198,7 +199,7 @@ article header a:hover {
 
 nav ul {
 	list-style-type: none;
-	background: linear-gradient(to bottom, #2b2d32, #000000);
+	background: linear-gradient(to bottom, #2b2d32, #3b3d42);
 	/*background-color: #2b2d32;*/
 	padding-top: 20px;
 	padding-bottom: 20px;
