Change cursor style to 'pointer' when hover over dropdown buttons and dropdown list items

--- a/main.css
+++ b/main.css
@@ -264,10 +264,7 @@ nav a {
 */
 nav a:hover, .dropdown:hover .dropbtn {
 	background-color: #005f5f;
-}
-
-nav a:active {
-	color: white;
+	cursor: pointer;
 }
 
 /* Dropdown content */
