--- a/main.css
+++ b/main.css
@@ -215,6 +215,11 @@ a:hover {
 	float: left;
 	border-radius: 50%;
 	margin-right: 5px;
+	border: 2px solid white;
+}
+
+.byline-wrapper p {
+	padding-top: 3px;
 }
 
 article header {
