--- a/main.css
+++ b/main.css
@@ -220,6 +220,22 @@ a:hover .social-icon {
 	padding-right: 5px;
 }
 
+.images {
+	/* Remove bullets */
+	list-style-type: none;
+	padding: 0;
+}
+
+.images li {
+	/* Display images inline */
+	display: inline;
+	/* 
+		Add a padding on the left so all images aren't just pushed right against 
+		each other. 
+	*/
+	padding-left: 10px;
+}
+
 .byline-wrapper {
 	padding-left: 10px;
 	margin-bottom: 10px;
@@ -254,6 +270,41 @@ nav a {
 	background-color: inherit;
 	transition: .3s background-color;
 	text-shadow: 0px 1px 0px black;
+}
+
+section a {
+	font-size: 15px;
+	font-weight: 100;
+	font-family: Lato, Helvetica, Arial;
+	color: rgba(0,173, 239, 0.5);
+	margin-top: 5px;
+	font-style: normal;
+}
+
+section a:hover {
+	text-decoration: underline;
+	color: rgba(0,173, 239, 1);
+}
+
+.featured-image {
+  /* Actual width of the <div> container */
+  width: 200px;
+  /* Actual height of the <div> container */
+  height: 100px;
+  /* Background image properties */
+  background: #ffffff url(images/sneakers.jpg) 0 0/200px 100px no-repeat;
+}
+
+.featured-image p {
+  /* Pink background color */
+  background-color: #ffc0cb;
+  /* Green font color */
+  color: #008000;
+  /* Adjust the padding */
+  padding: 5px 0 5px 0;
+  /* Make the text all uppercase */
+  text-transform: uppercase;
+  text-align: center;
 }
 
 .dropdown {
