--- a/main.css
+++ b/main.css
@@ -220,6 +220,18 @@ a:hover .social-icon {
 	padding-right: 5px;
 }
 
+.cakes {
+	/* Remove bullets */
+	list-style-type: none;
+}
+
+.cakes img {
+  float: left;
+  margin-top: 2px;
+  border-radius: 50%;
+  border: 1px solid black;
+}
+
 .images {
 	/* Remove bullets */
 	list-style-type: none;
