--- a/main.css
+++ b/main.css
@@ -49,7 +49,7 @@ h1 {
 	font-weight: 900;
 	text-align: center;
 	font-family: Arvo, Times, "Times New Roman"; 
-	color: #de1b1b;
+	color: #007f7f;
 	text-shadow: 0 1px 1px #8c8c90;
 	margin-top: 20px;
 }
@@ -214,8 +214,8 @@ a:hover .social-icon {
 .code-wrapper {
 	background-color: #ffffff;
 	border-radius: 10px;
-	padding-left: 5px;
-	padding-right: 5px;
+	padding: 10px;
+	border-left: 5px solid #007f7f;
 }
 
 .code-wrapper p{
@@ -234,8 +234,8 @@ a:hover .social-icon {
 	margin-top: 5px;
 	background-color: #ffffff;
 	border-radius: 10px;
-	padding-left: 5px;
-	padding-right: 5px;
+	padding: 10px;
+	border-left: 5px solid #007f7f;
 }
 
 .cakes {
