--- a/main.css
+++ b/main.css
@@ -196,6 +196,50 @@ li {
 	margin-top: 5px;
 }
 
+fieldset {
+	/* Form width */
+	width: 400px;
+	/* Outline of the form */
+	border: 1px solid #ccc;
+	border-radius: 10px;
+	padding: 20px;
+}
+
+label {
+	/* set to inline-block in order to set a width */
+	display: inline-block;
+	/* same size for all labels */
+	width: 90px;
+	/* align label to the right */
+	text-align: right;
+}
+
+input, textarea {
+	/* 
+		By default <input> fields use a sans-serif font and <textarea> fields use a 
+		monospace font. Make sure that all text fields use the same font.
+	*/
+	font-family: Lato, Helvetica, Arial;
+	/* Make sure all text fields are the same size */
+	width: 300px;
+	/* 
+		The width & height properties includes content, padding and border, but not 
+		the margin.
+	*/
+	box-sizing: border-box; 
+	/* Set the same border style as the outline of the form */
+	border: 1px solid #ccc;
+}
+
+textarea {
+	/* 
+		Align the top of the textarea with the top of the tallest element on the 
+		line(i.e. label).
+	*/
+	vertical-align: top;
+	height: 100px;
+}
+
 /*----------------------------------------------------------------------------*/
 
 a:hover {
@@ -453,4 +497,22 @@ nav #current {
 .monospace p {
 	font-family: 'Roboto Mono', Courier, "Courier New";
 	font-size: 30px;
+}
+
+/* Add space between inputs */
+fieldset div + div {
+	margin-top: 20px;
+}
+
+/* Select and style input field when it get focus */
+input:focus, textarea:focus {
+	background-color: #ccc;
+}
+
+/* Align button with text fields */
+.button {
+	/* Same size as the width of the labels */
+	padding-left: 90px;
+	/* Represents the space between a label and the text field. */
+	margin-left: .5em;
 }
