--- a/main.css
+++ b/main.css
@@ -517,3 +517,60 @@ nav #current {
 	/* Represents the space between a label and the text field. */
 	margin-left: .5em;
 }
+
+.border-radius-1 {
+	height: 100px;
+	width: 200px;
+	border: 5px solid red;
+	border-radius: 25px;
+}
+
+.border-radius-2 {
+	height: 100px;
+	width: 200px;
+	border: 5px solid red;
+	border-radius: 25px 50px;
+}
+
+.border-radius-3 {
+	height: 100px;
+	width: 200px;
+	border: 5px solid red;
+	border-radius: 20px 40px 60px;
+}
+
+.border-radius-4 {
+	height: 100px;
+	width: 200px;
+	border: 5px solid red;
+	border-radius: 10px 20px 30px 40px;
+}
+
+.border-radius-5 {
+	height: 100px;
+	width: 200px;
+	border: 5px solid red;
+	border-radius: 30px/60px;
+}
+
+.border-radius-6 {
+	height: 100px;
+	width: 200px;
+	border: 5px solid red;
+	border-radius: 60px/30px;
+}
+
+.border-radius-7 {
+	height: 100px;
+	width: 200px;
+	border: 5px solid red;
+	border-radius: 50%;
+}
+
+.border-radius-8 {
+	height: 200px;
+	width: 200px;
+	border: 5px solid red;
+	border-radius: 50%;
+}
+
