--- a/main.css
+++ b/main.css
@@ -113,8 +113,7 @@ a {
 }
 
 header {
-	background: radial-gradient(circle 800px, #ffffff, #f0f0f0);
-	background-color: white; 
+	background: radial-gradient(circle, gainsboro 20%, lightgray 40%, silver 60%, darkgray 80%, gray 100%);
 	/*background-image: url(background.jpg);*/
 	box-shadow: 0 1px 1px black;
 	/* header in fixed position (following 3 properties)*/
@@ -132,7 +131,7 @@ main {
 }
 
 article {
-	width: 1000px;
+	width: 960px;
 	margin: 0 auto 0 auto;
 }
 
@@ -432,10 +431,11 @@ nav #current {
   vertical-align: top;
 }
 
-.tagline h4 {
-	text-align: center;
-	text-transform: uppercase;
-	margin: 0 0 20px 0;
+.website-logo {
+	display: block;
+	margin: 0 auto;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 .serif p {
