--- a/main.css
+++ b/main.css
@@ -44,6 +44,7 @@ body {
 	background-color: #ffffff;
 }
 
+/*
 h1 {
 	font-size: 55px;
 	font-weight: 900;
@@ -53,6 +54,7 @@ h1 {
 	text-shadow: 0 1px 1px #8c8c90;
 	margin-top: 20px;
 }
+*/
 
 h2 {
 	padding-top: 0;
@@ -196,7 +198,7 @@ code {
 	background-color: #ffffff;
 	border-radius: 10px;
 	padding: 10px;
-	border-left: 5px solid red;
+	border-left: 5px solid #007f7f;
 	display: block;
 }
 
@@ -225,7 +227,7 @@ a:hover .social-icon {
 	background-color: #ffffff;
 	border-radius: 10px;
 	padding: 10px;
-	border-left: 5px solid lime;
+	border-left: 5px solid #007f7f;
 }
 
 .cakes {
@@ -637,4 +639,138 @@ nav #current {
 	font-weight: 100;
 	font-family: Lato, Helvetica, Arial;
 	color: rgba(255, 255, 255, 0.5);
+}
+
+.text-shadow-1 h1 {
+	font-size: 100px;
+	font-weight: bold;
+	font-family: Lato, Helvetica, Arial;
+	color: black;
+	text-shadow: 5px 5px #a0a0a0;
+}
+
+.text-shadow-2 h1 {
+	font-size: 100px;
+	font-weight: bold;
+	font-family: Lato, Helvetica, Arial;
+	color: black;
+	text-shadow: -5px 5px #a0a0a0;
+}
+
+.text-shadow-3 h1 {
+	font-size: 100px;
+	font-weight: bold;
+	font-family: Lato, Helvetica, Arial;
+	color: black;
+	text-shadow: 5px -5px #a0a0a0;
+}
+
+.text-shadow-4 h1 {
+	font-size: 100px;
+	font-weight: bold;
+	font-family: Lato, Helvetica, Arial;
+	color: black;
+	text-shadow: -5px -5px #a0a0a0;
+}
+
+.text-shadow-5 h1 {
+	font-size: 100px;
+	font-weight: bold;
+	font-family: Lato, Helvetica, Arial;
+	color: black;
+	text-shadow: 0 5px #a0a0a0;
+}
+
+.text-shadow-6 h1 {
+	font-size: 100px;
+	font-weight: bold;
+	font-family: Lato, Helvetica, Arial;
+	color: black;
+	text-shadow: 0 -5px #a0a0a0;
+}
+
+.text-shadow-7 h1 {
+	font-size: 100px;
+	font-weight: bold;
+	font-family: Lato, Helvetica, Arial;
+	color: black;
+	text-shadow: 5px 0 #a0a0a0;
+}
+
+.text-shadow-8 h1 {
+	font-size: 100px;
+	font-weight: bold;
+	font-family: Lato, Helvetica, Arial;
+	color: black;
+	text-shadow: -5px 0 #a0a0a0;
+}
+
+.text-shadow-9 h1 {
+	font-size: 100px;
+	font-weight: bold;
+	font-family: Lato, Helvetica, Arial;
+	color: black;
+	text-shadow: -5px 0 10px #a0a0a0;
+  	
+}
+
+.text-shadow-10 h1 {
+	font-size: 100px;
+	font-weight: bold;
+	font-family: Lato, Helvetica, Arial;
+	color: black;
+	text-shadow:
+		-5px 5px #505050,
+   	-10px 10px #707070,
+   	-15px 15px #909090;
+}
+
+.text-shadow-11 {
+	background: #0e8dbc;
+}
+
+.text-shadow-11 h1 {
+	font-size: 100px;
+	font-weight: bold;
+	font-family: Lato, Helvetica, Arial;
+	color: white;
+	text-shadow:	
+		/* Shades of gray (make the character 3D) */
+		0 1px 0 #d0d0d0,
+		0 2px 0 #c0c0c0,
+		0 3px 0 #b0b0b0,
+		0 4px 0 #a0a0a0,
+		0 5px 0 #909090,
+		/* Black shadows (character shadows) */
+		0 6px 1px rgba(0,0,0,.1),
+		0 5px  10px  rgba(0,0,0,.25),
+		0 10px 10px rgba(0,0,0,.2),
+		0 20px 20px rgba(0,0,0,.15);
+}
+
+.text-shadow-12 {
+	background: #404040;
+}
+
+.text-shadow-12 h1 {
+	font-size: 100px;
+	font-weight: bold;
+	font-family: Lato, Helvetica, Arial;
+	color: rgba(0,0,0,.3);
+	text-shadow: 2px 2px 2px rgba(255,255,255,.1);
+}
+
+.text-shadow-13 {
+	background: aqua;
+}
+
+.text-shadow-13 h1 {
+	font-size: 100px;
+	font-weight: bold;
+	font-family: Lato, Helvetica, Arial;
+	color: white;
+	text-shadow:
+		-5px 5px #00eeee,
+   	-10px 10px #00dddd,
+   	-15px 15px #00cccc;
 }
