--- a/main.css
+++ b/main.css
@@ -568,15 +568,8 @@ nav #current {
 .box-shadow-1, .box-shadow-2, .box-shadow-3, .box-shadow-4, .box-shadow-5, 
 .box-shadow-6, .box-shadow-7, .box-shadow-8, .box-shadow-9, .box-shadow-10 {
 	border: 1px solid black;
-	font-family: 'Roboto Mono', Courier, "Courier New";
-	padding-left: 10px;
 	width: 400px;
 	height: 50px;
-	/* align text in the center both vertically and horizontally(following 3 rules) */
-	text-align: center;
-	vertical-align: middle;
-	line-height: 50px;
-	margin-top: 10px;
 }
 
 .box-shadow-1 {
@@ -773,4 +766,30 @@ nav #current {
 		-5px 5px #00eeee,
    	-10px 10px #00dddd,
    	-15px 15px #00cccc;
+}
+
+.content-box {
+	border: 10px solid black;
+	margin: 20px;
+	padding: 30px; 
+  width: 200px;
+  height: 100px;
+}
+
+.padding-box {
+	border: 10px solid black;
+	margin: 20px;
+	padding: 30px; 
+	box-sizing: padding-box;
+	width: 200px;
+	height: 100px;
+}
+
+.border-box {
+	border: 10px solid black;
+	margin: 20px;
+	padding: 30px; 
+	box-sizing: border-box;
+	width: 200px;
+	height: 100px;
 }
